--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.32.0
+#streamlit==1.32.0
 torch>=1.9.0
 transformers>=4.21.0
 scikit-learn>=1.0
 seaborn>=0.11.0
 matplotlib>=3.5.0
-sentencepiece==0.1.99
+#sentencepiece==0.1.99
 fastapi>=0.110
 uvicorn[standard]>=0.24
